[project]
name = "gpv-flash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "numpy>=2.3.5",
    "openai>=2.11.0",
    "semchunk>=3.2.5",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
